# cpp14-project-template

./: .codedocs  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  codecov.yml  travis_script.sh
doc/: CMakeLists.txt  Doxyfile.in  directory_structure.md  main_page.md  markdown.html  setting_up_ci.md  setting_up_documentation.md  variables_and_targets.md
include/: config.h.in
include/project-abbr/: Helloworld.hpp  config.hpp  config.hpp.in  factorial.hpp  hello_world.hpp
scripts/: run_build.sh
src/: CMakeLists.txt  factorial.cpp  hello_world.cpp  main.cpp
src/project-abbr/: CMakeLists.txt  Factorial.cpp  HelloWorld.cpp  main.cpp
test/: CMakeLists.txt  factorial_test.cpp  hello_world_test.cpp  test_factorial.cpp  test_runner.cpp
tests/: CMakeLists.txt  Catch.hpp  TestFactorial.cpp  TestHelloWorld.cpp  catch.hpp  main.cpp  test_hello_world.cpp
